--- a/CardDesign.html
+++ b/CardDesign.html
@@ -12,12 +12,19 @@
                 <input type="text" class="email" placeholder="Type your Email">
                 <p class="pass">Password</p>
                 <input type="password" class="password" placeholder="Type your password">
-        
+            <p class="forgot">Forgot Password?</p>
             </div>
             <div class="button">
                 <button class="login">Login</button>
-                <button class="signin">Sign In</button>
             </div>
+            <p class="name2">Or Sign in Using</p>
+            <div class="images">
+                <img class="image1" src="facebook-logo-24.png">
+                <img src="instagram-alt-logo-24.png">
+                <img src="twitter-logo-24.png">
+
+            </div>
+            <a class="up" href="https://www.youtube.com">Sign Up!</a>
         
         </div>
 
