--- a/CardDesign.html
+++ b/CardDesign.html
@@ -8,7 +8,7 @@
         
         <div class="child-card"> <span class="name">Login</span>
             <div class="id">
-                <p class="user">Usrename</p>
+                <p class="user">Username</p>
                 <input type="text" class="email" placeholder="Type your Email">
                 <p class="pass">Password</p>
                 <input type="password" class="password" placeholder="Type your password">
