--- a/CardDesign.html
+++ b/CardDesign.html
@@ -8,9 +8,9 @@
         
         <div class="child-card"> <span class="name">Login</span>
             <div class="id">
-                <p class="user">Username</p>
+                <lable class="user">Username</lable>
                 <input type="text" class="email" placeholder="Type your Email">
-                <p class="pass">Password</p>
+                <lable class="pass">Password</lable>
                 <input type="password" class="password" placeholder="Type your password">
             <p class="forgot">Forgot Password?</p>
             </div>
